--- a/index.html
+++ b/index.html
@@ -6,11 +6,78 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Today</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
-    <h1>Still in development</h1>
+    <section class="header">
+        <h1>Let's Help Those Who Are</h1>
+        <h1>More in Need</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat autem alias maiores. Totam natus <br>
+            voluptate quo asperiores provident assumenda. Itaque facilis in possimus at nemo!</p><br>
+        <a class="donate-button" target="_blank" href="">Donate Now</a>
+    </section>
+
+    <section class="donate-today">
+        <h1>Donate Today</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur accusamus quaerat,<br> ullam nulla
+            consectetur ab dicta odit rem sequi ex?</p>
+        <div class="donation-amount">
+            <a href="">100tk</a>
+            <a href="">200tk</a>
+            <a href="">500tk</a>
+            <a href="">1000tk</a>
+            <a href="">5000tk</a>
+        </div>
+        <input class="input_taka" type="" name="" id="" placeholder="Other Amount (taka)">
+        <br>
+        <br>
+        <a class="donate-button" target="_blank" href="">Donate Now</a>
+    </section>
+
+    <section class="donation-plan">
+        <h1>Our Donation Plan</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur accusamus quaerat,<br> ullam nulla
+            consectetur ab dicta odit rem sequi ex?</p>
+        <div class="donation-type">
+            <div class="food box">
+                <img src="images/food.png" width="50px" alt="">
+                <h2>Food for family</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam sequi magni nisi ex dignissimos
+                    odit labore facilis! Iure, totam sunt.</p>
+            </div>
+            <div class="shelter box">
+                <img src="images/family.png" width="50px" alt="">
+                <h2>Shelter for a family</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam sequi magni nisi ex dignissimos
+                    odit labore facilis! Iure, totam sunt.</p>
+            </div>
+            <div class="education box">
+                <img src="images/education.png" width="50px" alt="">
+                <h2>Education for a child</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam sequi magni nisi ex dignissimos
+                    odit labore facilis! Iure, totam sunt.</p>
+            </div>
+        </div>
+    </section>
+    <section class="update">
+        <h1>Get My Updates</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur accusamus quaerat,<br> ullam nulla
+            consectetur ab dicta odit rem sequi ex?</p>
+        <div class="subscribe-box">
+            <input class="email" type="email" name="" id="" placeholder="Email"><a class="subscribe-button"
+                href="">Subscribe</a>
+        </div>
+    </section>
+
+    <footer>
+        <h2>Be Humble</h2>
+        <p>Don't brag for your donation.</p>
+    </footer>
 </body>
 
 </html>
