--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <section class="header">
         <h1>Let's Help Those Who Are</h1>
         <h1>More in Need</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat autem alias maiores. Totam natus <br>
-            voluptate quo asperiores provident assumenda. Itaque facilis in possimus at nemo!</p><br>
+        <p>Helping the needy people will solve social unrest in many cases, it will bring peace to your mind also <br>
+            so help the needy people and get your inner peace and be responsible</p><br>
         <a class="donate-button" target="_blank" href="">Donate Now</a>
     </section>
 
     <section class="donate-today">
         <h1>Donate Today</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur accusamus quaerat,<br> ullam nulla
-            consectetur ab dicta odit rem sequi ex?</p>
+        <p>Today almost 13 million people are hungry in our bangladesh so please do for the poor,<br> whatever you can,
+            your every support will bring smile to the poor people</p>
         <div class="donation-amount">
             <a href="">100tk</a>
             <a href="">200tk</a>
@@ -41,33 +41,33 @@
 
     <section class="donation-plan">
         <h1>Our Donation Plan</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur accusamus quaerat,<br> ullam nulla
-            consectetur ab dicta odit rem sequi ex?</p>
+        <p>Once a great scholar explain that divide your monthly income into three parts. one,<br> part is for your
+            monthly expense, one for re-invesment and other is for donation.</p>
         <div class="donation-type">
             <div class="food box">
                 <img src="images/food.png" width="50px" alt="">
                 <h2>Food for family</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam sequi magni nisi ex dignissimos
-                    odit labore facilis! Iure, totam sunt.</p>
+                <p>Everyone will enjoy these delicious family meals, including kids and adults! Serve up dinner ideas
+                    like sandwiches, soups,</p>
             </div>
             <div class="shelter box">
                 <img src="images/family.png" width="50px" alt="">
                 <h2>Shelter for a family</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam sequi magni nisi ex dignissimos
-                    odit labore facilis! Iure, totam sunt.</p>
+                <p>State-Funded Resources for Families: Emergency Assistance Shelter, the HomeBASE Short-Term Housing
+                    Assistance Program, and Educational Supports.</p>
             </div>
             <div class="education box">
                 <img src="images/education.png" width="50px" alt="">
                 <h2>Education for a child</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam sequi magni nisi ex dignissimos
-                    odit labore facilis! Iure, totam sunt.</p>
+                <p>More than a half million Education Support Professional members take care of our children every day
+                    and make sure they have the tools they need to succeed.</p>
             </div>
         </div>
     </section>
     <section class="update">
         <h1>Get My Updates</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur accusamus quaerat,<br> ullam nulla
-            consectetur ab dicta odit rem sequi ex?</p>
+        <p>To get my donation update plz subscribe to our channel, don't miss any donation part<br> knowing who donate
+            and how it is helping the people will inspire you.</p>
         <div class="subscribe-box">
             <input class="email" type="email" name="" id="" placeholder="Email"><a class="subscribe-button"
                 href="">Subscribe</a>
