--- a/index.html
+++ b/index.html
@@ -64,6 +64,16 @@
             </div>
         </div>
     </section>
+    <section class="joining-donation">
+        <div>
+            <h1>Ready to start a donaton? Join wtih <br> thousands of others donator today.</h1>
+            <button class="start-donation-button">Start a Donation</button>
+        </div>
+        <div class="center">
+            <img src="images/flower-in-hand.png" alt="">
+        </div>
+    </section>
+
     <section class="update">
         <h1>Get My Updates</h1>
         <p>To get my donation update plz subscribe to our channel, don't miss any donation part<br> knowing who donate
